# scamzon

./: Aruco-Marker-Boxes  README.md  move_turtlebot
Aruco markers/: Aruco Box Master.blend1  aruco_box_0_.dae  aruco_box_13_.dae  aruco_box_18_.dae  aruco_box_19_.dae  aruco_box_4_.dae
Aruco-Markers/: README.txt
Aruco-Markers/Aruco markers/: Aruco Box Master.blend  aruco_box_10_.dae  aruco_box_11_.dae  aruco_box_12_.dae  aruco_box_14_.dae  aruco_box_15_.dae  aruco_box_16_.dae  aruco_box_17_.dae  aruco_box_1_.dae  aruco_box_2_.dae  aruco_box_3_.dae  aruco_box_5_.dae  aruco_box_6_.dae  aruco_box_7_.dae  aruco_box_8_.dae  aruco_box_9_.dae
autonomous_robot/: CMakeLists.txt  Doxyfile  colours.txt  cylinder_filter_and_placement.dox  goals_command.txt  ground_truths.txt  mainpage.dox  map_display_nodes.dox  output.txt  package.xml  run_unit_testing.txt  workflow.txt
autonomous_robot/html/: cylinder_filter_and_placement.html  graph_legend.html  index.html  map_display_nodes.html  pages.html
autonomous_robot/html/search/: all_0.js  all_1.js  all_2.js  pages_0.js  pages_1.js  pages_2.js  searchdata.js
autonomous_robot/latex/: cylinder_filter_and_placement.tex  index.tex  map_display_nodes.tex  refman.tex
autonomous_robot/map/: ground_truth.bt  ground_truth.pgm  ground_truth.yaml  map.pgm  map.yaml  real_warehouse.pgm  real_warehouse.yaml
autonomous_robot/python/: goals.json  mission.py  stocktake.txt
autonomous_robot/ros_bags/blue_box/: metadata.yaml
autonomous_robot/ros_bags/green_box/: metadata.yaml
autonomous_robot/ros_bags/localization/: metadata.yaml  rosbag2_2024_10_16-05_22_40_0.db3
autonomous_robot/ros_bags/navigation/: metadata.yaml  rosbag2_2024_10_17-22_26_36_0.db3
autonomous_robot/ros_bags/orange_box/: metadata.yaml
autonomous_robot/ros_bags/purple_box/: metadata.yaml
autonomous_robot/ros_bags/red_box/: metadata.yaml
autonomous_robot/ros_bags/yellow_box/: metadata.yaml
autonomous_robot/scripts/: goals.json  publish_goals.py
autonomous_robot/src/: autonomous_mapping.cpp  autonomous_mapping.hpp  autonomous_mapping_main.cpp  colour_detector.cpp  colour_detector.hpp  cylinder_detector.cpp  cylinder_detector.hpp  localizer_and_navigation.cpp  localizer_and_navigation.hpp  localizer_and_navigation_main.cpp  tsp.cpp  tsp.hpp
autonomous_robot/stocktake/: Stocktake_Report.txt
autonomous_robot/test/: box_detection_test.cpp  navigation_test.cpp  tsp_test.cpp
aws_warehouse/: tb3_aws_warehouse.launch.py
cylinder_navigation/: CMakeLists.txt  package.xml  workflow.txt
cylinder_navigation/src/: cylinder_detector.cpp  cylinder_detector.hpp  cylinder_navigation_node.cpp  cylinder_navigation_node.hpp  place_cylinder.cpp
hail_localiser/hail_localiser/: CMakeLists.txt  my_map.pgm  my_map.yaml  package.xml
hail_localiser/hail_localiser/src/: hail_localiser_node.cpp
localization/: CMakeLists.txt  README.md  README.txt  package.xml
localization/src/: scan_matcher.cpp
map_comparator/: CMakeLists.txt  package.xml
map_comparator/src/: show_current_map.cpp  show_finished_map.cpp
move_turtlebot/: CMakeLists.txt  package.xml
move_turtlebot/src/: move_robot_node.cpp
scamazon_navigation/: CMakeLists.txt  scamnav_commands.txt
scamazon_navigation/include/scamazon_navigation/: path_optimizer.hpp
scamazon_navigation/src/: initial_pose_publisher.cpp  main.cpp  path_optimizer.cpp  reach_goals.cpp  reach_goals.hpp
scan_matching_localizer/: package.xml
scan_matching_localizer/src/: scan_to_image_node.cpp
scan_matching_localizer_tejas/: CMakeLists.txt
scan_matching_localizer_tejas/include/scan_matching_localizer/: scan_to_image_node.hpp
scan_matching_localizer_tejas/src/: scan_to_image_node.cpp
simple_localizer/: CMakeLists.txt  package.xml
simple_localizer/src/: scan_matching_localiser.cpp
sml_graph/: Doxyfile  README.md  README.txt  package.xml  setup.cfg  setup.py
sml_graph/html/: graph_legend.html  index.html
sml_graph/latex/: refman.tex
sml_graph/sml_graph/: yaw_listener.py
sprint3/: sprint3_commands.txt
sprint3/src/: filter_cylinder.cpp
sprint_2_localiser/: CMakeLists.txt  README.md  package.xml
sprint_2_localiser/src/: scan_matching_localiser.cpp  small_warehouse.yaml
tejasWarehouse/: turtlebot3_GroupWarehouse.launch.py  updatedWarehouse.world  updatedWarehouse_map2.pgm  updatedWarehouse_map2.yaml  warehouse_map.pgm  warehouse_map.yaml  warehouse_map_gimped.pgm  warehouse_map_gimped.xcf
warehouse_map/: small_warehouse.pgm  small_warehouse.yaml  warehouse_map.yaml
warehouse_navigation/: CMakeLists.txt  package.xml
warehouse_navigation/launch/: warehouse.launch.py
warehouse_navigation/map/: warehouse_map.yaml
warehouse_world/: turtlebot3_closed_warehouse.world  turtlebot3_small_warehouse.world  turtlebot3_warehouse.launch.py  turtlebot3_warehouse.world
