<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>autonomous_robot</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="jarred.g.deluca@student.uts.edu.au">student</maintainer>
  <license>TODO: License declaration</license>

  <!-- Build dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <!-- Runtime dependencies -->
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav2_msgs</depend>
  <depend>std_srvs</depend>
  <depend>action_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>lifecycle_msgs</depend>
  <depend>opencv</depend>
  <depend>visualization_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>OpenCV</depend>
  <depend>rosbag2_cpp</depend>
  <depend>rclcpp_components</depend>

  <!-- Test dependencies -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_gtest</test_depend> <!-- Adding gtest for unit testing -->
  <test_depend>ament_cmake_ros</test_depend>

  <!-- Export -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
