<?xml version="1.0"?>
<package format="2">
  <name>map_comparator</name>
  <version>0.0.1</version>
  <description>Compare ground truth map with current and final maps</description>

  <maintainer email="you@example.com">Your Name</maintainer>

  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>nav_msgs</depend>
  <depend>opencv</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
