<?xml version="1.0"?>
<package format="3">
  <name>sml_graph</name>
  <version>0.0.1</version>
  <description>Plot yaw data for Turtlebot3</description>

  <maintainer email="your.email@domain.com">Your Name</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <build_depend>rclpy</build_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>matplotlib</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
